--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.csg.airvisualapiexam"
-        minSdkVersion 22
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
 //    implementation 'com.google.android.gms:play-services-location:16.0.0'
@@ -48,7 +49,9 @@ dependencies {
     dependencies {
         def nav_version = "1.0.0"
 
-        implementation "android.arch.navigation:navigation-fragment:$nav_version" // For Kotlin use navigation-fragment-ktx
-        implementation "android.arch.navigation:navigation-ui:$nav_version" // For Kotlin use navigation-ui-ktx
+        implementation "android.arch.navigation:navigation-fragment:$nav_version"
+        // For Kotlin use navigation-fragment-ktx
+        implementation "android.arch.navigation:navigation-ui:$nav_version"
+        // For Kotlin use navigation-ui-ktx
     }
 }
