AutocompleteSupportFragment 했던거 옮겨 놨음.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:28.0.0'
 
+    implementation 'com.google.android.libraries.places:places:1.1.0'
+
     dependencies {
         def nav_version = "1.0.0"
 
@@ -53,5 +55,15 @@ dependencies {
         // For Kotlin use navigation-fragment-ktx
         implementation "android.arch.navigation:navigation-ui:$nav_version"
         // For Kotlin use navigation-ui-ktx
+        def lifecycle_version = "1.1.1"
+
+        // ViewModel and LiveData
+        implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+        // alternatively - just ViewModel
+
+        def room_version = "1.1.1"
+
+        implementation "android.arch.persistence.room:runtime:$room_version"
+        annotationProcessor "android.arch.persistence.room:compiler:$room_version"
     }
 }
